# FULP_EP4_Demo_first_steps

./: ._.python-version  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: ollama.dockerfile  streamlit.dockerfile
