[project]
name = "fulp-ep4-demo-first-steps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
